--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -15,5 +15,27 @@
   "msg_agree_qdelivery_service_guide": "[필수] Qdelivery 서비스 안내 / 금지 품목 / 관세에 사항에 대한 안내를 모두 확인하였습니다. ",
   "please_select_from_nation": "출발 국가를 선택해주세요.",
   "please_select_nation": "도착 국가를 선택해주세요.",
-  "ok": "확인"
+  "ok": "확인",
+  "service_guide_detail": "한국 발 안내 사항\n\n한국 출발 서비스는 한국어 약관이 적용됩니다.\n서비스 안내 및 이용 약관 미확인에 따른 피해는 Qxpress에서 책임을 부담하지 않습니다.\n\n1. 신청시 유의 사항 \n- 한 박스당 한 건의 주문이 필요합니다. (이음 포장 불가) \n- 보내실 물품의 품목명, 수량, 단가를 정확하게 입력하여야 합니다. \n- 품목명, 수량, 단가를 정확히 입력 하지 않은 경우 도착 국가 통관 검수 대상이 될 수 있으며, 증명 요청 및 폐기될 수 있습니다. 폐기시 비용 발생 책임은 고객에게 있습니다.\n- 가구, 가전, 유리 등 파손되기 쉬운 품목은 보상이 불가합니다.\n- 포장이 충분하지 않거나, 부적절한 포장인 경우 픽업 또는 배송 거부될 수 있습니다.\n\n- 포장 미비로 인한 누수 및 파손 발생시 이에 대한 책임은 발송인에게 있으며, 누수로 인해 타화물에 손해를 끼친 경우 발송인에게 청구됩니다.\n- 잘못 입력된 주소에 따른 배송 불가의 책임은 고객에게 있습니다.\n- 통관 불가 품목 포함, 포장 미비, 픽업번호 중복 사용 등으로 인해 배송이 불가한 경우 부분 반송 또는 전체 반송이 될 수 있습니다.\n\n2. 배송 규격 유의 사항\n- 포장된 물품의 사이즈는 가로+(세로+높이)x2 =300cm 미만이어야 합니다.\n- 포장된 물품의 최장변 길이는 150cm를 초과할 수 없습니다.\n- 포장된 물품의 총 무게는 부피무게, 중량 모두 확인 하여야 하며, 20Kg을 초과할 수 없습니다. \n- 포장된 물품의 부피무게는 (가로x세로x높이)/6,000= Kg 으로 계산되며, 20Kg을 초과할 수 없습니다.\n- 포장된 물품의 사이즈는 운송장이 부착될 수 있도록 가로15cm x세로10cm 이상이어야 합니다.\n\n 3. 반송 및 환불 관련 유의 사항\n- 부분 반송의 경우 착불 반송 처리되며, 배송 가능한 품목은 도착 국가로 배송됩니다.\n- 부분 반송으로 인해 발생하는 무게 차이에 대한 배송비 환불은 불가합니다.\n- 전체 반송의 경우 착불 반송 처리되며, 결제한 금액에서 픽업 비용 제외 후 환불됩니다.\n- 결제한 무게 요금보다 입고 시 측정된 무게가 적은 경우 그에 따른 차액 환불은 불가합니다. \n- 출발지 집하 센터 도착 이후 상태에서의 취소 및 반송 요청은 불가합니다.\n- 배송 지연에 따른 환불 및 보상은 불가합니다.\n\n4. 추가 비용 및 관세 관련 유의사항\n- 최종 배송비는 부피무게와 실측무게 중 무거운 요금으로 적용됩니다.\n-  Qdelivery 신청 시 결제한 요금보다 실제 측정된 배송 상품이 더 무거울 경우 추가요금이 부과됩니다.\n- 추가 비용 미결제 시 배송 및 이용이 제한됩니다.\n- 도착 국가의 세관 기준에 따라 관세가 발생하고 청구될 수 있습니다. (도착 국가별 관세발생기준 확인)\n - 검수 및 세관 검사로 인해 물품을 개봉할 수 있으며, 이에 대한 책임을 배송사에게 제기할 수 없습니다.\n- 각 나라별 통관 기준은 수출인, 수입인이 확인해야하며, 이로 인해 발생한 폐기 및 반송에 대한 책임은 Qxpress에 없습니다\n- 폐기 및 반송 비용 납부 의무는 발송인에게 있으며, 비용은 도착국 기준으로 산정되어 청구 됩니다. (변동가격으로 사전 안내 불가)\n\n5. 파손 조사 관련 유의 사항\n- 파손 및 분실 조사 요청은 배송 완료 후 3일 이내 신청해주시기 바랍니다.\n- 파손 조사 시 외부 박스 사진, 내품 사진, 파손된 물품의 개별 포장 상태 및 파손 부분 사진을 제출하지 않은 경우 파손 조사가 불가합니다.\n\n\u003c보상 한도 안내\u003e\n큐딜리버리는 별도의 보험이 가입되지 않으며, 보상 확정 후 아래 한도 내에서 보상금이 지급됩니다.\n한국 국내 USD 100 / 해외 USD 100\n\n6. Qdelivery 국내배송\n- 국내 계약 배송사 이용약관에 따름\n\n",
+  "select_address_input_type": "주소 입력 방식",
+  "direct_input": "직접 입력",
+  "used_my_address_book": "내 정보 이용",
+  "name": "이름",
+  "address": "주소",
+  "search": "검색",
+  "please_check_address_detail_input": "세부 주소를 입력 해주세요",
+  "telephone_number": "전화 번호",
+  "email_address": "이메일주소",
+  "msg_allow_total_4_items": "* 아이템은 최대 4개까지 등록 가능합니다.",
+  "text_add": "추가",
+  "text_product": "상품",
+  "delete": "삭제",
+  "item_name": "상품명",
+  "item_count": "상품 갯수",
+  "item_price": "상품 가격",
+  "url_or_picture": "Item URL 또는 사진",
+  "msg_required_url_or_image": "* 상품을 확인할 수 있는 URL 혹은 사진 중 한가지 값을 필수로 입력해주세요.",
+  "url": "상품 URL",
+  "item_image": "상품 대표 이미지",
+  "msg_upload_image": "- 명확하게 상품을 구분할 수 있는 사진을 등록해주세요.\nJPG, JPEG, GIF,PNG 파일로 업로드 가능합니다.\n- 업로드 권장 사이즈: 600 x 600"
 }
