--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -62,5 +62,27 @@
   "text_signup": "Register ",
   "search_estimated_costs": "Get Quotation",
   "add_before_item": "Import Past Info",
-  "add_new_item": "Add New "
+  "add_new_item": "Add New ",
+  "international_ship_management": "Manage Item for Int\u0027l Delivery",
+  "get_item_info": "Get Item Info",
+  "register_item": "Register Item",
+  "item_default_info": "Basic item information",
+  "item_code": "Item code",
+  "item_code_msg": "It is created automatically when you register the Item.",
+  "item_detail_category": "Item category",
+  "item_option": "Item Option",
+  "manage_item_code": "Item Code Management",
+  "register_barcode": "Barcode registration",
+  "user_define_item_code": "Account reference Item Code",
+  "msg_user_define_item_code": "* If there is a product code used by the Account, please enter it.",
+  "item_detail_info": "Product details",
+  "brand": "Brand",
+  "metarial": "material",
+  "origin": "origin",
+  "origin_msg": "* It is recommended to enter the country ISO code for origin.\nex) Korea KR / Japan JP",
+  "msg_url": "* Detailed item information is required for overseas delivery.\nPlease enter the URL for detailed information.",
+  "customs_info": "Customs clearance information",
+  "oversea_trade_code": "Overseas/Transaction Code",
+  "postal_tax": "Parcel Tax Code (for china)",
+  "customs_msg": "* For overseas delivery, customs clearance information is required.\nTherefore, please enter the correct information."
 }
