--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -63,5 +63,27 @@
   "text_signup": "신청",
   "search_estimated_costs": "예상 비용 조회하기",
   "add_before_item": "이전 상품 가져오기",
-  "add_new_item": "새로 추가하기"
+  "add_new_item": "새로 추가하기",
+  "international_ship_management": "해외 배송 상품 관리",
+  "get_item_info": "상품 불러오기",
+  "register_item": "아이템 등록",
+  "item_default_info": "상품 기본 정보",
+  "item_code": "상품코드",
+  "item_code_msg": "상품을 등록하면 자동으로 생성됩니다.",
+  "item_detail_category": "상품 카테고리",
+  "item_option": "상품 옵션",
+  "manage_item_code": "상품 코드 관리",
+  "register_barcode": "바코드 등록",
+  "user_define_item_code": "사용자 정의 상품 코드",
+  "msg_user_define_item_code": "* 판매자가 사용하는 상품 코드가 있다면 입력해주세요.",
+  "item_detail_info": "상품 상세 정보",
+  "brand": "브랜드",
+  "metarial": "재료",
+  "origin": "원산지",
+  "origin_msg": "* 상품 원산지는 국가 ISO 코드 입력을 권장합니다.\nex ) 한국KR / 일본 JP",
+  "msg_url": "* 해외 배송을 하기 위해서는 상세 아이템 정보가 필요합니다. \n배송하려는 상품의 상세 정보를 확인할 수 있는 URL을 입력해주세요.",
+  "customs_info": "통관 정보",
+  "oversea_trade_code": "해외/거래코드",
+  "postal_tax": "행우세",
+  "customs_msg": "* 해외 배송 시, 통관을 위한 통관 정보가 필요합니다. \n입력하신 내용을 바탕으로 통관이 진행되니, 정확한 정보를 입력해 주세요."
 }
