--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -98,5 +98,6 @@
   "no_input_address": "Please input the address. ",
   "no_input_address_en": "Please input the address in English. ",
   "no_input_tel": "Please input the mobile number. ",
-  "english_address": "Address in English"
+  "english_address": "Address in English",
+  "keyword_search": "If you enter a search keyword,\nthe search results are displayed."
 }
