--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -99,5 +99,6 @@
   "no_input_address": "주소를 입력해 주세요. ",
   "no_input_address_en": "영문 주소지를 입력해 주세요.",
   "no_input_tel": "전화번호를 입력해주세요. ",
-  "english_address": "영문 주소"
+  "english_address": "영문 주소",
+  "keyword_search": "키워드을 입력하고 검색 버튼을 탭하면\n검색 결과가 표시됩니다."
 }
