--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -100,5 +100,8 @@
   "no_input_tel": "Please input the mobile number. ",
   "english_address": "Address in English",
   "keyword_search": "If you enter a search keyword,\nthe search results are displayed.",
-  "no_result_address": "No search results.\nPlease check and enter your keyword again."
+  "no_result_address": "No search results.\nPlease check and enter your keyword again.",
+  "select_state": "Select State",
+  "select_street": "Select street",
+  "select_city": "Select City"
 }
