--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -111,5 +111,7 @@
   "no_item_name": "상품명을 입력해주세요.",
   "no_item_price": "상품 가격을 입력해주세요.",
   "no_item_url": "상품 URL 또는 이미지를 추가해주세요.",
-  "no_item_weight": "상품의 무게 정보를 입력해주세요."
+  "no_item_weight": "상품의 무게 정보를 입력해주세요.",
+  "delete_item_msg": "삭제하시겠습니까?",
+  "cancel": "취소"
 }
