--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -112,5 +112,7 @@
   "no_item_url": "Please input the item URL or upload the image. ",
   "no_item_weight": "Please input the total weight of items.",
   "delete_item_msg": "Want to delete? ",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "no_barcode_item": "Products without barcodes",
+  "no_image_item": "Products without images"
 }
